--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     <main>
         <h1>Blackjack</h1>
         <h2>Dealer</h2>
-        <img src="" alt="player cards">
+        <div class="cards">
+            <img id="dealerCards" src="" alt="player cards">
+        </div>
         <h2>Player</h2>
-        <img src="" alt="playing cards">
+        <div class="cards">
+            <img id="playerCards" src="" alt="playing cards">
+        </div>
+        
     </main>
 </body>
 </html>
