Add JS and make request from API

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
         <h1>Blackjack</h1>
         <h2>Dealer</h2>
         <div class="cards">
-            <img id="dealerCards" src="" alt="player cards">
+            <img id="dealerCard1" src="" alt="dealer card 1">
+            <img id="dealerCard2" src="" alt="dealer card 2">
         </div>
         <h2>Player</h2>
         <div class="cards">
-            <img id="playerCards" src="" alt="playing cards">
+            <img id="playerCard1" src="" alt="player card 1">
+            <img id="playerCard2" alt="player card 2">
         </div>
-        
+        <button>Play</button>
+        <script src="js/main.js"></script>
     </main>
 </body>
 </html>
