--- a/index.html
+++ b/index.html
@@ -20,12 +20,24 @@
             <img id="dealerCard1" src="" alt="dealer card 1">
             <img id="dealerCard2" src="" alt="dealer card 2">
         </div>
-        <h2>Player</h2>
+        <div class="playerDiv">
+            <h2 class="player">Player</h2>
+        </div>
+
         <div class="cards">
             <img id="playerCard1" src="" alt="player card 1">
-            <img id="playerCard2" alt="player card 2">
+            <img id="playerCard2" src="" alt="player card 2">
+            <img id="playerCard3" src="" alt="player card 3">
         </div>
-        <button>Play</button>
+        <section class="buttons">
+            <button id="hit">Hit</button>
+            <button id="stand">Stand</button>
+            <button id="double">Double</button>
+           
+        </section>
+        <button id="play">Play</button>
+        <button id="split">Split</button>
+
         <script src="js/main.js"></script>
     </main>
 </body>
