--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h1>Blackjack</h1>
         <h2>Dealer</h2>
-        <div class="cards">
+        <div class="cards dealerCards">
             <img id="dealerCard1" src="" alt="dealer card 1">
             <img id="dealerCard2" src="" alt="dealer card 2">
         </div>
@@ -24,10 +24,10 @@
             <h2 class="player">Player</h2>
         </div>
 
-        <div class="cards">
+        <div class="cards playerCards">
             <img id="playerCard1" src="" alt="player card 1">
             <img id="playerCard2" src="" alt="player card 2">
-            <img id="playerCard3" src="" alt="player card 3">
+            
         </div>
         <section class="buttons">
             <button id="hit">Hit</button>
