--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button id="double">Double</button>
            
         </section>
-        <button id="play">Play</button>
+        <button id="play">Deal</button>
         <button id="split">Split</button>
 
         <script src="js/main.js"></script>
