Add chip section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </div>
 
         <div class="cards playerCards">
+            <div class="chips">
+                <img src="" alt="">
+            </div>
             <img id="playerCard1" src="" alt="player card 1">
             <img id="playerCard2" src="" alt="player card 2">
             
